# nps_uw_sensors_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: ci.yml
config/: sonar_tank_blueview_m450.rviz  sonar_tank_blueview_m450_images.perspective  sonar_tank_blueview_p900.rviz  sonar_tank_seabat_f50.rviz  sonar_tank_seabat_f50_images.perspective
docker/: Dockerfile  build.bash
include/nps_uw_sensors_gazebo/: fft.hpp  gazebo_ros_image_sonar.hh  nps_gazebo_ros_depth_camera_sonar_single_beam.h  nps_gazebo_ros_gpu_sonar_single_beam.h  nps_gazebo_ros_gpu_sonar_single_beam.hh  sonar_calculation_cuda.cuh
launch/: depth_camera_sonar_basic.launch  depth_camera_sonar_single_beam_basic.launch  sonar_single_beam_basic.launch  sonar_tank_blueview_m450.launch  sonar_tank_blueview_m450_nps_multibeam.launch  sonar_tank_blueview_p900.launch  sonar_tank_blueview_p900_nps_multibeam.launch  sonar_tank_seabat_f50.launch  sonar_tank_seabat_f50_nps_multibeam.launch  upload_uuvsim_teledyne_whn.xml  upload_whoi_teledyne_whn.xml  upload_whoi_teledyne_whn_standalone.xml  uuvsim_teledyne_whn.launch  uuvsim_teledyne_whn_standalone.launch  uuvsim_teledyne_whn_standalone_gradient.launch  uw_lidar.launch  uw_lidar_standalone.launch  whoi_current_profiling_demo.launch  whoi_dvl_static_side_by_side.launch  whoi_teledyne_whn.launch  whoi_teledyne_whn_standalone.launch  whoi_teledyne_whn_standalone_gradient.launch
models/3dad_sl3/: model.config  model.sdf
models/3dad_sl3/mesh/: 3dad_sl3.dae
models/blueview_m450/: model.config  model.sdf
models/blueview_m450/meshes/: blueview_m450.dae
models/blueview_p900/: model.sdf
models/seabat_f50/: model.config  model.sdf
models/uuvsim_teledyne_whn/: model.config  model.sdf
models/uuvsim_teledyne_whn_urdf/: model.config  model.urdf
models/whoi_nortek_dvl1000_300/: model.config  model.sdf
models/whoi_nortek_dvl1000_4000/: model.config  model.sdf
models/whoi_nortek_dvl500_300/: model.config  model.sdf
models/whoi_nortek_dvl500_6000/: model.config  model.sdf
models/whoi_sonardyne_syrinx600/: model.config  model.sdf
models/whoi_teledyne_explorer1000/: model.config  model.sdf
models/whoi_teledyne_explorer4000/: model.config  model.sdf
models/whoi_teledyne_whn/: model.config  model.sdf
rviz/: uw_lidar.rviz  whoi_dvl_side_by_side.rviz  whoi_teledyne_dvl.rviz
scripts/: depth_camera_sonar.py  plotRawData.m  sonar_equations.py  sonar_ros.py
src/: dvl_gradient_plot.py  gazebo_ros_image_sonar.cpp  gazebo_ros_pulse_lidar.cpp  nps_gazebo_ros_depth_camera_sonar_single_beam.cpp  nps_gazebo_ros_depth_camera_sonar_single_beam.h  nps_gazebo_ros_gpu_sonar_single_beam.cpp  simple_box_motion.py  simple_motion.py  sonar_calculation_cuda.cu  uuv_sim_dvl_state_and_gradient.py  whoi_dvl_state_and_gradient.py
tools/: code_check.sh
urdf/: depth_camera_sonar.xacro  depth_camera_sonar_robot.xacro  depth_camera_sonar_single_beam.xacro  depth_camera_sonar_single_beam_robot.xacro  sonar_single_beam.xacro  sonar_single_beam_robot.xacro  uuvsim_nortek_dvl1000_300.xacro  uuvsim_nortek_dvl1000_4000.xacro  uuvsim_nortek_dvl500_300.xacro  uuvsim_nortek_dvl500_6000.xacro  uuvsim_sonardyne_syrinx600.xacro  uuvsim_teledyne_explorer_1000.xacro  uuvsim_teledyne_explorer_4000.xacro  uuvsim_teledyne_whn.xacro  uuvsim_teledyne_whn_robot.xacro  uw_lidar.xacro  uw_lidar_pedestal_robot.xacro  uw_lidar_robot.xacro  whoi_dvl_side_by_side.xacro  whoi_nortek_dvl1000_300.xacro  whoi_nortek_dvl1000_4000.xacro  whoi_nortek_dvl500_300.xacro  whoi_nortek_dvl500_6000.xacro  whoi_sonardyne_syrinx600.xacro  whoi_teledyne_explorer_1000.xacro  whoi_teledyne_explorer_4000.xacro  whoi_teledyne_whn.xacro  whoi_teledyne_whn_beams.xacro  whoi_teledyne_whn_robot.xacro  whoi_teledyne_whn_standalone.xacro
worlds/: ocean_waves_watch_whoi_dvl.world  sonar_single_beam_basic.world  sonar_tank_blueview_m450.world  sonar_tank_blueview_p900.world  sonar_tank_seabat_f50.world  uw_lidar_basic.world
