<?xml version="1.0"?>
<package format="2">
  <name>nps_uw_sensors_gazebo</name>
  <version>0.0.1</version>
  <description>
    NPS Gazebo underwater sensor plugins.
  </description>

  <maintainer email="bdallen@nps.edu">Bruce Allen</maintainer>
  <author email="bdallen@nps.edu">Bruce Allen</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

</package>
